# JTS

./: .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BRINGUP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-third-party.md  NEXT_SESSION_PROMPT.md  NOTICE  PLAN.md  PRIVACY.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
capture-page/: README.md  build.sh  index.html  package.json  version.json
codex-briefs/: 01-licensing-redistribution.md  02-privacy.md  03-contributor-front-door.md  04-lan-trust-security.md  05-ci-and-repo-mechanics.md  06-doc-drift.md  07-defects-resilience.md  08-defects-misc.md  09-dead-code-python.md  10-voice-daemon.md  11-control-server-split.md  12-aec-bridge-emit-legs.md  13-sound-profile-js.md  14-install-sh-split.md  15-outputd-loudness-extract.md  16-improv-dedup.md  17-supply-chain-mirrors.md  README.md  REVIEW-PROMPT.md
deploy/: configure-bluez.sh  constraints-pi.txt  correction-preflight.html  endpoint-index.html  index.html  install.sh  integrations.html  jasper-bluetooth-web.service  jasper-bluetooth-web.socket  jasper-chat-web.service  jasper-chat-web.socket  jasper-correction-web.service  jasper-correction-web.socket  jasper-dial-web.service  jasper-dial-web.socket  jasper-sources-web.service  jasper-sources-web.socket  jasper-system-web.service  jasper-system-web.socket  jasper-web-streambox.service  jasper-web-streambox.socket  jasper-web.service  jasper-web.socket  nginx-jasper-endpoint.conf  nginx-jasper-https.conf  nginx-jasper-streambox.conf  nginx-jasper.conf  provenance.toml  shairport-sync.conf  shairport-sync.conf.template
docs/: AEC-DIAG-01-baseline.md  AEC-DIAG-02-observability.md  AEC-DIAG-03-timing-probe.md  AEC-DIAG-04-timing-results.md  AEC-DIAG-06-xvf-format-level-profile.md  CHIP-AEC-EXPERIMENT.md  CLEANUP-moode-removal.md  DEEP-AUDIT-PLAYBOOK.md  HANDOFF-active-speaker-dsp.md  HANDOFF-aec.md  HANDOFF-airplay-sync.md  HANDOFF-airplay.md  HANDOFF-apple-music.md  HANDOFF-audible-feedback.md  HANDOFF-audio-capability-platform.md  HANDOFF-audio-graph-consolidation.md  HANDOFF-audio-latency-foundation.md  HANDOFF-audio-measurement-core.md  HANDOFF-barge-in.md  HANDOFF-bass-extension-plan.md  HANDOFF-build-sandbox.md  HANDOFF-calibration-agent.md  HANDOFF-canonical-ui-migration.md  HANDOFF-chip-aec-portability.md  HANDOFF-control-plane-auth.md  HANDOFF-correction-revision-plan.md  HANDOFF-correction.md  HANDOFF-crossover-measurement-v2.md  HANDOFF-custom-wakeword-training.md  HANDOFF-distributed-active.md  HANDOFF-dlna.md  HANDOFF-dsp-graph-carrier.md  HANDOFF-fan-in-daemon.md  HANDOFF-homeassistant.md  HANDOFF-hotplug-resilience.md  HANDOFF-identity.md  HANDOFF-install-update-transaction.md  HANDOFF-management-ui.md  HANDOFF-mic-fusion-architecture.md  HANDOFF-mic-quality-v2.md  (+71 more)
firmware/: THIRD_PARTY.md
jasper/: _oom_adj.py  accounts.py  aec_sweep.py  assistant_loudness.py  assistant_volume.py  atomic_io.py  audio_buffer.py  audio_input_view.py  audio_io.py  audio_lab.py  audio_profile_state.py  audio_quality.py  audio_runtime_overrides.py  audio_runtime_plan.py  audio_validation.py  avahi_service.py  bass_alignment.py  bass_management.py  bluealsa_probe.py  bus.py  camilla.py  camilla_config_contract.py  camilla_emit.py  camilla_stereo_prefix.py  chip_aec_experiment.py  chip_aec_policy.py  citibike.py  config.py  control_advert.py  conversation_history.py  debug_mode.py  dsp_apply.py  env_file.py  env_load.py  fanin_coupling.py  flight_recorder.py  google_creds.py  google_routes.py  home_assistant.py  http_security.py  (+59 more)
jasper_aec3/: pyproject.toml  setup.py
jasper_aec3/jasper_aec3/: __init__.py
jasper_aec3/src/: aec3_binding.cpp  aec3_binding_v2.cpp
jasper_resampler/: pyproject.toml  setup.py
jasper_resampler/jasper_resampler/: __init__.py
jasper_resampler/src/: resampler_binding.cpp
multiroom-spike/: budget-flac-300ms.txt  budget-flac-500ms.txt  budget-flac-800ms.txt  stats-flac-300ms.json  stats-flac-500ms.json  stats-flac-800ms.json
oauth-callback/: README.md  index.html
relay/: README.md  package.json  wrangler.toml
rust/jasper-clock/: Cargo.toml
rust/jasper-clock/src/: htimestamp.rs  lib.rs
rust/jasper-dual-dac-lab/: Cargo.toml
rust/jasper-dual-dac-lab/src/: main.rs
rust/jasper-fanin/: Cargo.toml  README.md
rust/jasper-fanin/src/: assistant_reference.rs  config.rs  fifo.rs  host_clock.rs  host_compliance.rs  impulse_tap.rs  json.rs  lane_resampler.rs  loudness.rs  main.rs  mixer.rs  playout.rs  source_notify.rs  state.rs  tts.rs  watchdog.rs  xrun_log.rs
rust/jasper-host-clock/: Cargo.toml
rust/jasper-host-clock/src/: lib.rs
rust/jasper-outputd/: Cargo.toml
rust/jasper-outputd/src/: aec_clock.rs  alsa_backend.rs  assistant_reference.rs  config.rs  content_bridge.rs  core.rs  dac_clock.rs  dac_content.rs  fake.rs  ledger.rs  lib.rs  local_content_pipe.rs  loudness.rs  main.rs  mixer.rs  protocol.rs  reference.rs  shm_ring_source.rs  snapfifo.rs  software_aec_clock.rs  state.rs  tts.rs  types.rs
rust/jasper-resampler/: Cargo.toml
rust/jasper-resampler/examples/: golden_vector.rs
rust/jasper-resampler/src/: lib.rs
rust/jasper-ring/: Cargo.toml
rust/jasper-ring/src/: layout.rs  lib.rs  writer.rs
rust/jasper-usbsink-audio/: Cargo.toml
rust/jasper-usbsink-audio/src/: host_clock.rs  impulse_tap.rs  main.rs
scripts/: _analyze_three_leg.py  _analyze_wake_corpus_quality.py  _audit_baseline_events.py  _audit_wake_corpus.py  _audit_wake_events.py  _build_wake_feature_bank.py  _build_wake_negative_feature_bank.py  _chip_aec_experiment_lib.sh  _diagnostic_redaction.sh  _dtln_aec_offline.py  _export_wake_corpus_bundle.py  _extract_wake_corpus.py  _lib.sh  _make_click_track.py  _make_wake_test_track.py  _offline_wake_count.py  _prepare_wake_livekit_smoke.py  _prepare_wake_training_workdir.py  _run_wake_training_phase0.py  _wake_audio_metrics.py  _wake_pipeline_common.py  _waveform_fusion_experiment.py  aec-erle-record.sh  (+76 more)
(+1605 files in other folders)
