[project]
name = "jasper-speaker"
version = "0.1.0"
description = "Voice-controlled smart speaker on Raspberry Pi 5 with CamillaDSP and a swappable real-time voice backend (Gemini Live, OpenAI Realtime, xAI Grok)"
requires-python = ">=3.11"
dependencies = [
    "google-genai==1.13.0",
    # OpenAI Realtime SDK — used by jasper.voice.openai_session for
    # the gpt-realtime-2 backend, and (via the OpenAI-compatible WS
    # endpoint) by jasper.voice.grok_session for the xAI Grok Voice
    # Agent backend. 2.36.0 shipped on 2026-05-07 alongside
    # gpt-realtime-2 and exposes the post-GA `client.realtime.connect`
    # path; older SDKs only have `client.beta.realtime.connect`,
    # which we don't use. Pulls in `websockets` as the realtime
    # transport. Skippable at install time only if the active
    # provider is gemini AND the user is sure they'll never switch.
    "openai>=2.36.0",
    # `audioop` was removed from Python 3.13's stdlib (PEP 594). PiOS
    # Trixie ships 3.13, and jasper.voice.openai_session uses
    # audioop.ratecv to upsample 16 kHz mic audio to the 24 kHz that
    # OpenAI Realtime's `audio/pcm` requires. `audioop-lts` is the
    # maintained backport — drop-in `import audioop` replacement.
    # Conditional on 3.13+ so 3.11/3.12 environments (older Pi OS,
    # CI) keep using the stdlib version transparently.
    "audioop-lts>=0.2; python_version >= '3.13'",
    "camilladsp @ git+https://github.com/HEnquist/pycamilladsp@v4.0.0",
    # openwakeword==0.6.0 is installed by deploy/install.sh with --no-deps
    # because its transitive tflite-runtime dep has no Python 3.13 wheel
    # (PiOS Trixie's default python). We use ONNX models exclusively, so
    # tflite-runtime is never imported at runtime. See install.sh.
    "sounddevice==0.5.5",
    "numpy>=1.26,<3",
    # SciPy is needed for room-correction v2 (jasper.correction.*):
    # synchronized swept-sine generation, FFT-based deconvolution,
    # IIR biquad design (peq), and fractional-octave smoothing. Pi 5
    # 1 GB has plenty of free disk for the install (~200 MB) and
    # the runtime RAM cost during measurement is bounded by the
    # measurement_window() pause that frees librespot/shairport/
    # voice-daemon RAM first. ≥1.13 because we use scipy.signal.iirpeak
    # and the numpy 2.0 ABI compatibility is patched.
    "scipy>=1.13,<2",
    "spotipy==2.24.0",
    "httpx==0.28.1",
    "onnxruntime>=1.17",
    "nyct-gtfs==2.0.0",
    "rapidfuzz>=3.6,<4",
    # XVF3800 control: jasper.xvf.xvf_host (vendored from
    # github.com/respeaker/reSpeaker_XVF3800_USB_4MIC_ARRAY) talks to
    # the chip's USB vendor-control interface to set AUDIO_MGR_SYS_DELAY.
    "pyusb>=1.2",
    "libusb_package>=1.0",
    # ALSA-native PCM access for jasper-aec-bridge — needed because
    # PortAudio (sounddevice's backend) only enumerates hw: devices,
    # not custom asoundrc PCMs like `jasper_capture` (the dsnoop tap
    # we capture the AEC reference from).
    "pyalsaaudio>=0.11",
    # jasper-{dial,satellite}-onboard: pyserial for USB CDC discovery
    # + Improv handshake; esptool for firmware flash. Both pure-Python
    # and tiny.
    "pyserial>=3.5",
    "esptool>=4.7",
    # Google integration (Calendar + Gmail voice tools). google-auth and
    # google-auth-oauthlib drive the per-account OAuth + refresh flow;
    # google-api-python-client is the discovery-based service factory
    # (resource shapes for `calendar` and `gmail`). Pure-Python, tiny.
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
    # jasper-input: third-party HID accessory bridge (volume knobs,
    # macro pads, etc.) reads /dev/input/event* via python-evdev and
    # watches for hot-plug via pyudev. Tiny pure-Python deps.
    "evdev>=1.7",
    "pyudev>=0.24",
    # Web-driven BT pairing for HID accessories. dbus-next is the
    # asyncio-native bluez D-Bus client; lighter and more reliable
    # than shelling to `bluetoothctl` (parsing its output is flaky
    # across versions). Pure-Python, no C extension.
    "dbus-next>=0.2.3",
    # systemd watchdog notification (sd_notify protocol). The Tier 1
    # rung of the resilience ladder: each daemon's main loop bumps
    # a `last_progress` sentinel; a heartbeat thread reads it and
    # only pats systemd if the loop is actually making progress.
    # If progress stops (e.g. PortAudio blocked in a syscall holding
    # the GIL — the bridge failure mode from 2026-05-11), systemd's
    # WatchdogSec= timer expires and `Restart=on-watchdog` revives
    # the daemon with a fresh process. Pure-Python, ~5 kB.
    "sdnotify>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
jasper-voice = "jasper.voice_daemon:main"
jasper-spotify-auth = "jasper.cli.spotify_auth:main"
jasper-google-auth = "jasper.cli.google_auth:main"
jasper-doctor = "jasper.cli.doctor:main"
jasper-web = "jasper.web.spotify_setup:main"
jasper-control = "jasper.control.server:main"
jasper-mux = "jasper.mux:main"
jasper-aec-init = "jasper.cli.aec_init:main"
jasper-aec-tune = "jasper.cli.aec_tune:main"
jasper-aec-bridge = "jasper.cli.aec_bridge:main"
jasper-dial-onboard = "jasper.cli.dial_onboard:main"
jasper-dial-web = "jasper.web.dial_setup:main"
jasper-correction-web = "jasper.web.correction_setup:main"
jasper-satellite-onboard = "jasper.cli.satellite_onboard:main"
jasper-cues = "jasper.cues.cli:main"
jasper-input = "jasper.accessories.bridge:main"
jasper-bluetooth-web = "jasper.web.bluetooth_setup:main"
jasper-airplay-mode = "jasper.cli.airplay_mode:main"
jasper-airplay-web = "jasper.web.airplay_setup:main"
jasper-system-web = "jasper.web.system_setup:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Limit to the `jasper` namespace and its subpackages — without the
# trailing-dot pattern, setuptools' glob would also sweep up sibling
# distributions whose names start with "jasper" (e.g. jasper_aec3,
# our pybind11 binding for WebRTC AEC3 which lives at the repo root
# and is installed as a separate package).
include = ["jasper", "jasper.*"]

[tool.setuptools.package-data]
"jasper.data" = ["*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# `auto` mode applies @pytest.mark.asyncio implicitly to every async
# def test, so we don't have to repeat the marker on every test.
# Required by tests/test_gemini_session.py and tests/test_gemini_connection.py.
asyncio_mode = "auto"
