[project]
name = "jasper-speaker"
version = "0.1.0"
description = "Voice-controlled smart speaker on Raspberry Pi 5 with CamillaDSP and a swappable real-time voice backend (Gemini Live, OpenAI Realtime, xAI Grok)"
requires-python = ">=3.11"
dependencies = [
    # systemd watchdog notification (sd_notify protocol). Kept in the
    # base install because jasper-control runs on both full speakers and
    # endpoint-tier renderers with Type=notify.
    "sdnotify>=0.3.2",
]

[project.optional-dependencies]
streambox = [
    # Streambox = local renderers + local CamillaDSP content/driver DSP,
    # without voice/wake/mic/AEC/provider integrations. Keep this list
    # deliberately narrower than [full] so Zero-class installs do not
    # pull assistant-only SDKs or wake-word runtimes just to play music.
    "camilladsp @ https://github.com/HEnquist/pycamilladsp/archive/fdc0d163e02dd73206a493402b43c83502ad83d7.tar.gz#sha256=d9d33cab26c4cabcd85daccfbb39a3294579eed8816fbe0ca77f36fe0370f087",
    "sounddevice==0.5.5",
    "numpy>=1.26,<3",
    "scipy>=1.13,<2",
    "spotipy==2.26.0",
    "httpx==0.28.1",
    "rapidfuzz>=3.6,<4",
    "dbus-next>=0.2.3",
    "zeroconf>=0.149,<1.0",
]

full = [
    "google-genai==2.8.0",
    # OpenAI Realtime SDK — used by jasper.voice.openai_session for
    # the gpt-realtime-2 backend, and (via the OpenAI-compatible WS
    # endpoint) by jasper.voice.grok_session for the xAI Grok Voice
    # Agent backend. 2.36.0 shipped on 2026-05-07 alongside
    # gpt-realtime-2 and exposes the post-GA `client.realtime.connect`
    # path; older SDKs only have `client.beta.realtime.connect`,
    # which we don't use. Pulls in `websockets` as the realtime
    # transport. Skippable at install time only if the active
    # provider is gemini AND the user is sure they'll never switch.
    "openai>=2.36.0",
    # `audioop` was removed from Python 3.13's stdlib (PEP 594). PiOS
    # Trixie ships 3.13, and jasper.voice.openai_session uses
    # audioop.ratecv to upsample 16 kHz mic audio to the 24 kHz that
    # OpenAI Realtime's `audio/pcm` requires. `audioop-lts` is the
    # maintained backport — drop-in `import audioop` replacement.
    # Conditional on 3.13+ so 3.11/3.12 environments (older Pi OS,
    # CI) keep using the stdlib version transparently.
    "audioop-lts>=0.2; python_version >= '3.13'",
    # pycamilladsp v4.0.0, fetched as a hash-checked archive at the
    # tag commit so Pi installs do not need git. See deploy/provenance.toml.
    "camilladsp @ https://github.com/HEnquist/pycamilladsp/archive/fdc0d163e02dd73206a493402b43c83502ad83d7.tar.gz#sha256=d9d33cab26c4cabcd85daccfbb39a3294579eed8816fbe0ca77f36fe0370f087",
    # openwakeword==0.6.0 is installed by deploy/install.sh with --no-deps
    # because its transitive tflite-runtime dep has no Python 3.13 wheel
    # (PiOS Trixie's default python). We use ONNX models exclusively, so
    # tflite-runtime is never imported at runtime. See install.sh.
    "sounddevice==0.5.5",
    "numpy>=1.26,<3",
    # SciPy is needed for room-correction v2 (jasper.correction.*):
    # synchronized swept-sine generation, FFT-based deconvolution,
    # IIR biquad design (peq), and fractional-octave smoothing. Pi 5
    # 1 GB has plenty of free disk for the install (~200 MB) and
    # the runtime RAM cost during measurement is bounded by the
    # measurement_window() pause that frees librespot/shairport/
    # voice-daemon RAM first. ≥1.13 because we use scipy.signal.iirpeak
    # and the numpy 2.0 ABI compatibility is patched.
    "scipy>=1.13,<2",
    "spotipy==2.26.0",
    "httpx==0.28.1",
    "onnxruntime>=1.17",
    "nyct-gtfs==2.1.0",
    "rapidfuzz>=3.6,<4",
    # XVF3800 control: jasper.xvf.xvf_host talks to the chip's USB
    # vendor-control interface for boot-time profile writes and diagnostics.
    "pyusb>=1.2",
    "libusb_package>=1.0",
    # ALSA-native PCM access for jasper-aec-bridge — needed because
    # PortAudio (sounddevice's backend) only enumerates hw: devices,
    # not custom asoundrc PCMs like `jasper_capture` (the dsnoop tap
    # we capture the AEC reference from).
    "pyalsaaudio>=0.11; sys_platform == 'linux'",
    # jasper-{dial,satellite}-onboard: pyserial for USB CDC discovery
    # + Improv handshake; esptool for firmware flash. Both pure-Python
    # and tiny.
    "pyserial>=3.5",
    "esptool>=4.7",
    # Google integration (Calendar + Gmail voice tools). google-auth and
    # google-auth-oauthlib drive the per-account OAuth + refresh flow;
    # google-api-python-client is the discovery-based service factory
    # (resource shapes for `calendar` and `gmail`). Pure-Python, tiny.
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
    # jasper-input: third-party HID accessory bridge (volume knobs,
    # macro pads, etc.) reads /dev/input/event* via python-evdev and
    # watches for hot-plug via pyudev. Tiny pure-Python deps.
    "evdev>=1.7; sys_platform == 'linux'",
    "pyudev>=0.24",
    # Web-driven BT pairing for HID accessories. dbus-next is the
    # asyncio-native bluez D-Bus client; lighter and more reliable
    # than shelling to `bluetoothctl` (parsing its output is flaky
    # across versions). Pure-Python, no C extension.
    "dbus-next>=0.2.3",
    # jasper.peering: mDNS-SD discovery of sibling JTS speakers for
    # multi-device wake arbitration. Used in browse-only mode — the
    # host's Avahi daemon remains the only mDNS responder (peering
    # advertises via /etc/avahi/services/jasper-peer.service, a
    # static XML installed by deploy/install.sh). Browse-only avoids
    # the dual-stack conflict (pyvisa-py#378). Imported lazily inside
    # jasper.peering.discovery so the package is import-cheap when
    # peering is OFF (the default). ~5-8 MB Pss when active.
    "zeroconf>=0.149,<1.0",
]

dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
jasper-voice = "jasper.voice_daemon:main"
jasper-spotify-auth = "jasper.cli.spotify_auth:main"
jasper-google-auth = "jasper.cli.google_auth:main"
jasper-doctor = "jasper.cli.doctor:main"
jasper-web = "jasper.web.spotify_setup:main"
jasper-control = "jasper.control.server:main"
jasper-control-token = "jasper.cli.control_token:main"
jasper-mux = "jasper.mux:main"
jasper-aec-init = "jasper.cli.aec_init:main"
jasper-aec-tune = "jasper.cli.aec_tune:main"
jasper-aec-bridge = "jasper.cli.aec_bridge:main"
jasper-aec-sweep-config = "jasper.cli.aec_sweep_config:main"
jasper-audio-validate = "jasper.audio_validation:main"
jasper-audio-hw-validate = "jasper.audio_validation:hardware_main"
jasper-usbsink = "jasper.cli.usbsink_main:main"
jasper-dial-onboard = "jasper.cli.dial_onboard:main"
jasper-dial-web = "jasper.web.dial_setup:main"
jasper-correction-web = "jasper.web.correction_setup:main"
jasper-correction-bundle = "jasper.cli.correction_bundle:main"
jasper-calibration-agent = "jasper.calibration_agent.cli:main"
jasper-active-speaker = "jasper.cli.active_speaker:main"
jasper-satellite-onboard = "jasper.cli.satellite_onboard:main"
jasper-cues = "jasper.cues.cli:main"
jasper-input = "jasper.accessories.bridge:main"
jasper-bluetooth-agent = "jasper.bluetooth.no_code_agent:main"
jasper-bluetooth-web = "jasper.web.bluetooth_setup:main"
jasper-airplay-mode = "jasper.cli.airplay_mode:main"
jasper-airplay-web = "jasper.web.airplay_setup:main"
jasper-sources-web = "jasper.web.sources_setup:main"
jasper-sound-web = "jasper.web.sound_setup:main"
jasper-system-web = "jasper.web.system_setup:main"
jasper-system-soak = "jasper.cli.system_soak:main"
jasper-wake-enroll = "jasper.cli.wake_enroll:main"
jasper-noise-capture = "jasper.cli.noise_capture:main"
jasper-wake-score = "jasper.cli.wake_score:main"
jasper-wake-review = "jasper.cli.wake_review:main"
jasper-wake-corpus-web = "jasper.web.wake_corpus_setup:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Limit to the `jasper` namespace and its subpackages — without the
# trailing-dot pattern, setuptools' glob would also sweep up sibling
# distributions whose names start with "jasper" (e.g. jasper_aec3,
# our pybind11 binding for WebRTC AEC3 which lives at the repo root
# and is installed as a separate package).
include = ["jasper", "jasper.*"]

[tool.setuptools.package-data]
"jasper.data" = ["*.csv"]
"jasper.active_speaker" = ["presets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# `auto` mode applies @pytest.mark.asyncio implicitly to every async
# def test, so we don't have to repeat the marker on every test.
# Required by tests/test_gemini_session.py and tests/test_gemini_connection.py.
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
# Spikes / one-off experiments are not production code — don't lint them.
extend-exclude = ["experiments", "scripts/experiments"]

[tool.ruff.lint]
# Ruff's default rule set (pyflakes `F` + a pragmatic pycodestyle `E`
# subset) is the bug-catching floor — unused imports, undefined names,
# f-strings without placeholders, etc. We intentionally do NOT enable
# import-sorting (`I`) or pyupgrade (`UP`) here: those would rewrite/
# reorder across the whole tree for no correctness gain. Three E-rules
# are switched off because the codebase uses them deliberately and
# pervasively:
#   E701 — terse one-line guards (`if x: return`)
#   E731 — assigned lambdas
#   E402 — deliberate deferred imports / post-`sys.modules`-stub imports
ignore = ["E701", "E731", "E402"]

[tool.ruff.lint.per-file-ignores]
# dbus-next reads string type-code annotations off the method signatures
# (`device: "o"` is a D-Bus object path; "s"/"u"/"q" are string/uint32/
# uint16). Ruff resolves those forward-ref strings as names and
# false-flags them as undefined; they are already `# type: ignore`.
"jasper/bluetooth/agent.py" = ["F821"]
