[project]
name = "jasper-speaker"
version = "0.1.0"
description = "Voice-controlled smart speaker on Raspberry Pi 5 with CamillaDSP and a swappable real-time voice backend (Gemini Live, OpenAI Realtime, xAI Grok)"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "LICENSE-third-party.md"]
dependencies = [
    # systemd watchdog notification (sd_notify protocol). Kept in the
    # base install because jasper-control runs on both full speakers and
    # endpoint-tier renderers with Type=notify.
    "sdnotify>=0.3.2",
]

[project.optional-dependencies]
streambox = [
    # Streambox = local renderers + local CamillaDSP content/driver DSP,
    # without voice/wake/mic/AEC/provider integrations. Keep this list
    # deliberately narrower than [full] so Zero-class installs do not
    # pull assistant-only SDKs or wake-word runtimes just to play music.
    "camilladsp @ https://github.com/HEnquist/pycamilladsp/archive/fdc0d163e02dd73206a493402b43c83502ad83d7.tar.gz#sha256=d9d33cab26c4cabcd85daccfbb39a3294579eed8816fbe0ca77f36fe0370f087",
    "sounddevice==0.5.5",
    "numpy>=1.26,<3",
    "scipy>=1.13,<2",
    "spotipy==2.26.0",
    "httpx==0.28.1",
    "rapidfuzz>=3.6,<4",
    "dbus-next>=0.2.3",
    "zeroconf>=0.149,<1.0",
]

full = [
    "google-genai==2.8.0",
    # OpenAI Realtime SDK — used by jasper.voice.openai_session for
    # the gpt-realtime-2 backend, and (via the OpenAI-compatible WS
    # endpoint) by jasper.voice.grok_session for the xAI Grok Voice
    # Agent backend. 2.36.0 shipped on 2026-05-07 alongside
    # gpt-realtime-2 and exposes the post-GA `client.realtime.connect`
    # path; older SDKs only have `client.beta.realtime.connect`,
    # which we don't use. Pulls in `websockets` as the realtime
    # transport. Skippable at install time only if the active
    # provider is gemini AND the user is sure they'll never switch.
    "openai>=2.36.0",
    # `audioop` was removed from Python 3.13's stdlib (PEP 594). PiOS
    # Trixie ships 3.13, and jasper.voice.openai_session uses
    # audioop.ratecv to upsample 16 kHz mic audio to the 24 kHz that
    # OpenAI Realtime's `audio/pcm` requires. `audioop-lts` is the
    # maintained backport — drop-in `import audioop` replacement.
    # Conditional on 3.13+ so 3.11/3.12 environments (older Pi OS,
    # CI) keep using the stdlib version transparently.
    "audioop-lts>=0.2; python_version >= '3.13'",
    # pycamilladsp v4.0.0, fetched as a hash-checked archive at the
    # tag commit so Pi installs do not need git. See deploy/provenance.toml.
    "camilladsp @ https://github.com/HEnquist/pycamilladsp/archive/fdc0d163e02dd73206a493402b43c83502ad83d7.tar.gz#sha256=d9d33cab26c4cabcd85daccfbb39a3294579eed8816fbe0ca77f36fe0370f087",
    # openwakeword==0.6.0 is installed by deploy/install.sh with --no-deps
    # because its transitive tflite-runtime dep has no Python 3.13 wheel
    # (PiOS Trixie's default python). We use ONNX models exclusively, so
    # tflite-runtime is never imported at runtime. See install.sh.
    "sounddevice==0.5.5",
    "numpy>=1.26,<3",
    # SciPy is needed for room-correction v2 (jasper.correction.*):
    # synchronized swept-sine generation, FFT-based deconvolution,
    # IIR biquad design (peq), and fractional-octave smoothing. Pi 5
    # 1 GB has plenty of free disk for the install (~200 MB) and
    # the runtime RAM cost during measurement is bounded by the
    # measurement_window() pause that frees librespot/shairport/
    # voice-daemon RAM first. ≥1.13 because we use scipy.signal.iirpeak
    # and the numpy 2.0 ABI compatibility is patched.
    "scipy>=1.13,<2",
    "spotipy==2.26.0",
    "httpx==0.28.1",
    "onnxruntime>=1.17",
    "nyct-gtfs==2.1.0",
    "rapidfuzz>=3.6,<4",
    # XVF3800 control: jasper.xvf.xvf_host talks to the chip's USB
    # vendor-control interface for boot-time profile writes and diagnostics.
    "pyusb>=1.2",
    "libusb_package>=1.0",
    # ALSA-native PCM access for jasper-aec-bridge — needed because
    # PortAudio (sounddevice's backend) only enumerates hw: devices,
    # not custom asoundrc PCMs like `jasper_capture` (the dsnoop tap
    # we capture the AEC reference from).
    "pyalsaaudio>=0.11; sys_platform == 'linux'",
    # jasper-{dial,satellite}-onboard: pyserial for USB CDC discovery
    # + Improv handshake; esptool for firmware flash. Both pure-Python
    # and tiny.
    "pyserial>=3.5",
    "esptool>=4.7",
    # Google integration (Calendar + Gmail voice tools). google-auth and
    # google-auth-oauthlib drive the per-account OAuth + refresh flow;
    # google-api-python-client is the discovery-based service factory
    # (resource shapes for `calendar` and `gmail`). Pure-Python, tiny.
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
    # jasper-input: third-party HID accessory bridge (volume knobs,
    # macro pads, etc.) reads /dev/input/event* via python-evdev and
    # watches for hot-plug via pyudev. Tiny pure-Python deps.
    "evdev>=1.7; sys_platform == 'linux'",
    "pyudev>=0.24",
    # Web-driven BT pairing for HID accessories. dbus-next is the
    # asyncio-native bluez D-Bus client; lighter and more reliable
    # than shelling to `bluetoothctl` (parsing its output is flaky
    # across versions). Pure-Python, no C extension.
    "dbus-next>=0.2.3",
    # jasper.peering: mDNS-SD discovery of sibling JTS speakers for
    # multi-device wake arbitration. Used in browse-only mode — the
    # host's Avahi daemon remains the only mDNS responder (peering
    # advertises via /etc/avahi/services/jasper-peer.service, a
    # static XML installed by deploy/install.sh). Browse-only avoids
    # the dual-stack conflict (pyvisa-py#378). Imported lazily inside
    # jasper.peering.discovery so the package is import-cheap when
    # peering is OFF (the default). ~5-8 MB Pss when active.
    "zeroconf>=0.149,<1.0",
    # jasper.capture_relay.crypto: AES-256-GCM decryption of the phone-mic
    # capture blob the Pi pulls from the relay (the page encrypts with
    # WebCrypto; the Pi decrypts here before feeding the existing room/
    # balance/sync/crossover analysis). pyca/cryptography is the standard
    # AEAD implementation — never roll our own — and is already present
    # transitively via google-auth/httpx; pinned here because we import it
    # directly. aarch64 wheels exist for PiOS Trixie, so no Pi-side build.
    "cryptography>=42",
]

dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.8",
    "ruff>=0.6",
    # The day-one baseline is checker-version-sensitive. Bump this
    # deliberately when tightening or regenerating the baseline.
    "mypy>=2.1,<2.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.8",
    "ruff>=0.6",
    # The day-one baseline is checker-version-sensitive. Bump this
    # deliberately when tightening or regenerating the baseline.
    "mypy>=2.1,<2.2",
]
openwakeword-onnx = [
    # Support deps for the ONNX-only openWakeWord runtime installed with
    # `openwakeword==0.6.0 --no-deps`. Keep these lock-covered while avoiding
    # openWakeWord's declared tflite-runtime dep, which has no Python 3.13 wheel.
    "requests",
    "tqdm",
    "scikit-learn>=1,<2",
]

[project.scripts]
jasper-voice = "jasper.voice_daemon:main"
jasper-spotify-auth = "jasper.cli.spotify_auth:main"
jasper-google-auth = "jasper.cli.google_auth:main"
jasper-doctor = "jasper.cli.doctor:main"
jasper-web = "jasper.web.spotify_setup:main"
jasper-control = "jasper.control.server:main"
jasper-control-token = "jasper.cli.control_token:main"
jasper-mux = "jasper.mux:main"
jasper-local-source-allowed = "jasper.local_sources.guard:main"
jasper-aec-init = "jasper.cli.aec_init:main"
jasper-aec-tune = "jasper.cli.aec_tune:main"
jasper-aec-bridge = "jasper.cli.aec_bridge:main"
jasper-aec-sweep-config = "jasper.cli.aec_sweep_config:main"
jasper-xvf-profile = "jasper.cli.xvf_profile:main"
jasper-xvf-firmware-update = "jasper.cli.xvf_firmware_update:main"
jasper-audio-validate = "jasper.audio_validation:main"
jasper-audio-hw-validate = "jasper.audio_validation:hardware_main"
jasper-usbsink = "jasper.cli.usbsink_main:main"
jasper-dial-onboard = "jasper.cli.dial_onboard:main"
jasper-dial-web = "jasper.web.dial_setup:main"
jasper-correction-web = "jasper.web.correction_setup:main"
jasper-correction-bundle = "jasper.cli.correction_bundle:main"
jasper-calibration-agent = "jasper.calibration_agent.cli:main"
jasper-active-speaker = "jasper.cli.active_speaker:main"
jasper-output-topology-reset = "jasper.cli.output_topology_reset:main"
jasper-satellite-onboard = "jasper.cli.satellite_onboard:main"
jasper-cues = "jasper.cues.cli:main"
jasper-input = "jasper.accessories.bridge:main"
jasper-accessory-reconcile = "jasper.accessories.reconcile:main"
jasper-wiim-remote-mic = "jasper.accessories.wiim_remote_mic:main"
jasper-bluetooth-agent = "jasper.bluetooth.no_code_agent:main"
jasper-bluetooth-web = "jasper.web.bluetooth_setup:main"
jasper-airplay-mode = "jasper.cli.airplay_mode:main"
jasper-airplay-web = "jasper.web.airplay_setup:main"
jasper-sources-web = "jasper.web.sources_setup:main"
jasper-sound = "jasper.cli.sound:main"
jasper-sound-web = "jasper.web.sound_setup:main"
jasper-fanin-coupling-reconcile = "jasper.fanin.coupling_reconcile:main"
jasper-system-web = "jasper.web.system_setup:main"
jasper-chat-web = "jasper.web.chat_setup:main"
jasper-system-soak = "jasper.cli.system_soak:main"
jasper-wake-enroll = "jasper.cli.wake_enroll:main"
jasper-noise-capture = "jasper.cli.noise_capture:main"
jasper-wake-score = "jasper.cli.wake_score:main"
jasper-wake-review = "jasper.cli.wake_review:main"
jasper-wake-corpus-web = "jasper.web.wake_corpus_setup:main"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Limit to the `jasper` namespace and its subpackages — without the
# trailing-dot pattern, setuptools' glob would also sweep up sibling
# distributions whose names start with "jasper" (e.g. jasper_aec3,
# our pybind11 binding for WebRTC AEC3 which lives at the repo root
# and is installed as a separate package).
include = ["jasper", "jasper.*"]

[tool.setuptools.package-data]
"jasper" = ["py.typed"]
"jasper.data" = ["*.csv"]
"jasper.active_speaker" = ["presets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# `auto` mode applies @pytest.mark.asyncio implicitly to every async
# def test, so we don't have to repeat the marker on every test.
# Required by tests/test_gemini_session.py and tests/test_gemini_connection.py.
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
# Spikes / one-off experiments are not production code — don't lint them.
extend-exclude = ["experiments", "scripts/experiments"]

[tool.ruff.lint]
# Pyflakes `F`, Ruff's default pycodestyle subset (`E4`, `E7`, `E9`),
# and blind-except `BLE` are the bug-catching floor — unused imports,
# undefined names, f-strings without placeholders, syntax/runtime traps,
# and accidental broad exception handlers.
# We intentionally do NOT enable import-sorting (`I`) or pyupgrade (`UP`)
# here: those would rewrite/reorder across the whole tree for no
# correctness gain. Three E-rules are switched off because the codebase
# uses them deliberately and pervasively:
#   E701 — terse one-line guards (`if x: return`)
#   E731 — assigned lambdas
#   E402 — deliberate deferred imports / post-`sys.modules`-stub imports
select = ["E4", "E7", "E9", "F", "BLE"]
ignore = ["E701", "E731", "E402"]

[tool.ruff.lint.per-file-ignores]
# dbus-next reads string type-code annotations off the method signatures
# (`device: "o"` is a D-Bus object path; "s"/"u"/"q" are string/uint32/
# uint16). Ruff resolves those forward-ref strings as names and
# false-flags them as undefined; they are already `# type: ignore`.
"jasper/bluetooth/agent.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
files = ["jasper"]
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# dbus-next exposes BlueZ/ObjectManager methods dynamically from D-Bus
# introspection XML, e.g. call_connect() and call_get_managed_objects().
# Treat that library boundary as untyped rather than silencing the JTS
# modules that call it.
module = ["dbus_next", "dbus_next.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
# Day-one baseline generated on 2026-06-19 with mypy 2.1.0. Keep this broad
# but explicit so clean modules are checked now, and tighten by removing
# entries as local type fixes land.
module = [
    "jasper.accessories.bridge",
    "jasper.active_speaker.baseline_profile",
    "jasper.active_speaker.bringup",
    "jasper.active_speaker.calibration_level",
    "jasper.active_speaker.camilla_yaml",
    "jasper.active_speaker.commission_ramp",
    "jasper.active_speaker.commissioning_coordinator",
    "jasper.active_speaker.crossover_preview",
    "jasper.active_speaker.driver_protection",
    "jasper.active_speaker.measurement",
    "jasper.active_speaker.path_safety",
    "jasper.active_speaker.playback",
    "jasper.active_speaker.readiness",
    "jasper.active_speaker.runtime_contract",
    "jasper.active_speaker.safe_playback",
    "jasper.active_speaker.staging",
    "jasper.active_speaker.startup_load",
    "jasper.active_speaker.topology_tone",
    "jasper.aec_sweep",
    "jasper.assistant_loudness",
    "jasper.audio_io",
    "jasper.audio_validation",
    "jasper.bluetooth.scan",
    "jasper.camilla",
    "jasper.citibike",
    "jasper.cli._esp32_onboard",
    "jasper.cli.aec_bridge",
    "jasper.cli.aec_init",
    "jasper.cli.doctor",
    "jasper.cli.doctor.aec",
    "jasper.cli.doctor.audio",
    "jasper.cli.doctor.correction",
    "jasper.cli.doctor.grouping",
    "jasper.cli.doctor.resilience",
    "jasper.cli.satellite_validation",
    "jasper.cli.wake_enroll",
    "jasper.control.aec_endpoints",
    "jasper.control.airplay_health",
    "jasper.control.server",
    "jasper.control.state_aggregate",
    "jasper.control.system_metrics",
    "jasper.control.system_supervisor",
    "jasper.correction.acoustic_quality",
    "jasper.correction.autolevel",
    "jasper.correction.bundle_tools",
    "jasper.correction.calibration",
    "jasper.correction.peq",
    "jasper.correction.runtime_integrity",
    "jasper.correction.session",
    "jasper.home_assistant",
    "jasper.multiroom.leader_config",
    "jasper.multiroom.member_config",
    "jasper.mux",
    "jasper.output_hardware",
    "jasper.output_topology",
    "jasper.peering.daemon",
    "jasper.peering.discovery",
    "jasper.spotify_router",
    "jasper.spotify_routing",
    "jasper.subway",
    "jasper.tool_state",
    "jasper.tools.catalog",
    "jasper.tools.packs",
    "jasper.tools.spotify",
    "jasper.transit",
    "jasper.transit.providers.citibike",
    "jasper.transit.providers.nyc_subway",
    "jasper.usage",
    "jasper.usbsink.audio_bridge",
    "jasper.usbsink.daemon",
    "jasper.usbsink.preempt_listener",
    "jasper.usbsink.volume_bridge",
    "jasper.voice.daemon_main",
    "jasper.voice.gemini_session",
    "jasper.voice.openai_session",
    "jasper.voice_daemon",
    "jasper.volume_diagnostics",
    "jasper.wake",
    "jasper.wake_corpus.bridge_session",
    "jasper.wake_corpus.recording_backend",
    "jasper.wake_training.feature_bank",
    "jasper.weather",
    "jasper.web.__main__",
    "jasper.web._common",
    "jasper.web.balance_flow",
    "jasper.web.bluetooth_setup",
    "jasper.web.dial_setup",
    "jasper.web.rooms_setup",
    "jasper.web.sound_setup",
    "jasper.web.spotify_setup",
    "jasper.web.sync_flow",
    "jasper.web.tools_setup",
    "jasper.web.voice_setup",
    "jasper.web.wake_setup",
    "jasper.wifi_scan_repair",
    "jasper.xvf.xvf_host",
]
ignore_errors = true
