[build-system]
requires = ["setuptools>=77.0.3", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "jasper-resampler"
version = "0.1.0"
description = "Windowed-sinc resampler + spa_dll rate controller binding for jasper-usbsink"
requires-python = ">=3.11"
license = "Apache-2.0"
# No runtime install_requires and NO new apt/pip dependency. The binding
# is pure C++/pybind11 header-only math (a Blackman-Harris windowed-sinc
# interpolator + the spa_dll second-order DLL) — it links NOTHING beyond
# libstdc++, exactly like the sibling jasper_aec3 distribution. There is
# no external library to manage (unlike aec3's libwebrtc-audio-processing),
# so this pyproject carries no system-prereq note: a C++17 compiler +
# pybind11 (a build-system requirement above) is the whole story.
#
# The algorithm is the C++ mirror of the Rust crate rust/jasper-resampler;
# tests/test_resampler_contract.py pins the two to ≤1 LSB byte-identity.

[tool.setuptools.packages.find]
where = ["."]
include = ["jasper_resampler*"]
