[package]
name = "jasper-dual-dac-lab"
version = "0.1.0"
edition = "2021"
description = "Lab-only dual Apple USB-C DAC validation runner for JTS active-speaker experiments."
license = "Apache-2.0"
repository = "https://github.com/jaspercurry/JTS"
authors = ["Jasper Curry <jaspercurry@gmail.com>"]
rust-version = "1.75"

[dependencies]
# Match jasper-outputd's ALSA wrapper version so lab behavior stays close
# to the production final-output owner while remaining a separate binary.
alsa = "0.9"
anyhow = "1"
libc = "0.2"
signal-hook = "0.3"

[profile.release]
opt-level = 2
lto = false
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[[bin]]
name = "jasper-dual-dac-lab"
path = "src/main.rs"
